apps/htb/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-htb
  namespace: htb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-htb
  template:
    metadata:
      labels:
        app: redis-htb
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: "/data"
              name: redis-storage
          command: ["redis-server", "--save", "60", "1", "--appendonly", "yes"]
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc-1
---
apiVersion: v1
kind: Service
metadata:
  name: redis-htb-service
  namespace: htb
spec:
  selector:
    app: redis-htb
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
