apps/htb/htb-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htb-api
  namespace: htb
spec:
  selector:
    matchLabels:
      app: htb-api
  template:
    metadata:
      labels:
        app: htb-api
    spec:
      containers:
      - name: htb-api
        image: ghcr.io/alexvegas22/htb-api:api-f30bcbf6773ff0bb8cb3e592c9472927a84840a2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: htb-api
  namespace: htb
  labels:
    app: htb-api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: htb-api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htb-api-ingress
  namespace: htb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: htb.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htb-api
            port:
              number: 80
  tls:
    - hosts:
      - htb.v34l.com
      secretName: htb-api-secret
