apps/htb/htb-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htb-frontend
  namespace: htb
spec:
  selector:
    matchLabels:
      app: htb-frontend
  template:
    metadata:
      labels:
        app: htb-frontend
    spec:
      containers:
      - name: htb-frontend
        image: ghcr.io/alexvegas22/htb:frontend-5d5013d16e5485ecfab8f5d70dfa0109c811c85a
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: htb-frontend
  namespace: htb
  labels:
    app: htb-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: htb-frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htb-frontend-ingress
  namespace: htb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.tls: "true" # Enables HTTPS
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure # Allow both HTTP and HTTPS
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: htb.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htb-frontend
            port:
              number: 80
  tls:
    - hosts:
      - htb.v34l.com
      secretName: htb-secret
