apps/htb/htb-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htb-ws
  namespace: htb
spec:
  selector:
    matchLabels:
      app: htb-ws
  template:
    metadata:
      labels:
        app: htb-ws
    spec:
      containers:
      - name: htb-ws
        image: core.harbor.v34l.com/htb/htb-ws:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: htb-ws
  namespace: htb
  labels:
    app: htb-ws
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: htb-ws
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htb-ws-ingress
  namespace: htb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.tls: "true" # Enables HTTPS
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure # Allow both HTTP and HTTPS
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: ws.htb.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htb-ws
            port:
              number: 80
  tls:
    - hosts:
      - ws.htb.v34l.com
      secretName: htb-secret
